Module-1-Assessment-4-Tables and menus

--- a/25-highest-grossing-movies.html
+++ b/25-highest-grossing-movies.html
@@ -6,9 +6,13 @@
     </head>
 
     <body>
+
         <h1>The Top 25 Highest Grossing Movies</h1>
 
-        
+        <div id="menu">
+            <a href="25-highest-grossing-movies.html">Home</a>
+            <a href="info.html">Information</a>
+        </div>
 
         <table border="1">
             <tr>
