--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1>The Top 25 Highest Grossing Movies</h1>
 
         <div id="menu">
-            <a href="25-highest-grossing-movies.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="info.html">Information</a>
         </div>
 
