--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
     <body>
        
         <div id="menu">
-            <a href="25-highest-grossing-movies.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="info.html">Information</a>
 
         <P>  Worldwide box-office gross of over $2.8 billion, Avatar is proclaimed to be the "highest-grossing" film,
